force-app/main/default/objects/Power_Curve_Error__c/Power_Curve_Error__c.object-meta.xml
<CustomObject>
    <label>Power Curve Error</label>
    <nameField>
        <displayFormat>PCE-{000000}</displayFormat>
        <label>Power Curve Error Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Power Curve Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>