force-app/main/default/objects/Power_Curve_Error__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>Application__r.First_Name__c  &amp; &quot; &quot; &amp;  Application__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>