force-app/main/default/objects/Power_Curve_Error__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Power Curve Errors</relationshipLabel>
    <relationshipName>Power_Curve_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>