force-app/main/default/objects/Power_Curve_Error__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>