force-app/main/default/objects/Power_Curve_Error__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>