force-app/main/default/objects/Power_Curve_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Name__c</columns>
    <columns>Application__c</columns>
    <columns>Error__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>