force-app/main/default/objects/Power_Curve_Error__c/listViews/Last_3_Days.listView-meta.xml
<ListView>
    <fullName>Last_3_Days</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Name__c</columns>
    <columns>Application__c</columns>
    <columns>Error__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <label>Last 3 Days</label>
</ListView>