force-app/main/default/objects/Power_Curve_Error__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Name__c</columns>
    <columns>Application__c</columns>
    <columns>Error__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>